Fix minor overlapping bug when displaying dropdown menus over the index page

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -67,7 +67,7 @@
                 padding: 16px;
                 gap: 8px;
                 background-color: $content;
-                z-index: 1;
+                z-index: 10;
                 top: 36px;
                 border-radius: 5px;
 
